K3S/tools/nextcloud/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-db
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-db
  template:
    metadata:
      labels:
        app: nextcloud-db
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: nextcloud-db-volume
              mountPath: /var/lib/mysql
              subPath: nextcloud-db
      volumes:
        - name: nextcloud-db-volume
          persistentVolumeClaim:
            claimName: nextcloud-db-pvc
