K3S/tools/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nextcloud
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: nextcloud:30.0.5-apache
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nextcloud-volume
              mountPath: /var/www/html
              subPath: nextcloud
            - mountPath: /share/media
              name: media
            - mountPath: /share/nas
              name: nas
      volumes:
        - name: nextcloud-volume
          persistentVolumeClaim:
            claimName: nextcloud-pvc
        - name: nextcloud-config
          configMap:
            name: nextcloud-config
        - name: media
          nfs:
            path: /mnt/Hermes/Seedbox
            server: 10.100.0.10
        - name: nas
          nfs:
            path: /mnt/Hermes/Nas
            server: 10.100.0.10
