K3S/tools/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nextcloud
  name: nextcloud-svc
  namespace: nextcloud
spec:
  type: ClusterIP
  selector:
    app: nextcloud
  ports:
    - port: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nextcloud-db
  name: nextcloud-db-svc
  namespace: nextcloud
spec:
  type: ClusterIP
  selector:
    app: nextcloud-db
  ports:
    - port: 3306
